<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DebKit</string>
    
    <string name="prefs_cat_app">General Settings</string>
    <string name="prefs_boot">Auto Mount</string>
    <string name="prefs_boot_s">auto mount debian on systeem boot</string>
    
    <string name="prefs_cat_dist">Debian Settings</string>
    <string name="prefs_path">Image Location</string>
    <string name="prefs_path_s">directory where to write/read the chroot image file</string>    
    <string name="prefs_src">Source Location</string>
    <string name="prefs_src_s">http/ftp location of the debian mirror to use</string>    
    <string name="prefs_size">Image Size</string>
    <string name="prefs_size_s">size in MB of the chroot disk image</string>
    <string name="prefs_dist">Debian Distribution</string>
    <string name="prefs_dist_s">name of the distribution to install</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_install">Install</string>
    <string name="menu_mount">Mount</string>
    <string name="menu_unmount">Unmount</string>
    <string name="menu_fix">Fix</string>
    <string name="menu_bugreport">Bug Report</string>
    <string name="menu_help">Help</string>    
    <string name="menu_close">Close</string>    
    <string name="menu_quit">Exit</string>
    
    <string name="search_market">First install a Terminal App</string>
    <string name="help_term">
        After installing a <b>terminal</b> open the application and type:\n
        \n
        <tt>shell@localhost$ su</tt>\n
        <tt>shell@localhost# debkit mount</tt>\n
        <tt>shell@localhost# debkit chroot</tt>\n
        \n
        And when done and not planning of using <tt>chroot</tt> for a while just do:\n
        \n
        <tt>shell@localhost$ su</tt>\n
        <tt>shell@localhost# debkit umount</tt>\n
        \n
        <b>[!]</b>You can mount or enable the <i>automatic mount</i> option in this App so you can skip the \'<tt>debkit mount</tt>\' step.\n
        <b>[!]</b>Also available are the <i>Mount</i> and <i>Umount</i> commands from the App menu instead of typing it in the terminal.\n
        <b>[!]</b>Don\'t forget to \'<tt>debkit umount</tt>\' before uninstalling the App or re-installing the chroot image, else you will have to manually umount and remove the data directory.\n
        <b>[!]</b>Use <i>Fix</i> from the App menu to reset the symlink to debkit if the command is not working anymore in a terminal.\n
    </string>
    
</resources>