<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/settings"
          android:title="@string/menu_settings"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/install"
          android:title="@string/menu_install"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/mount"
          android:title="@string/menu_mount"/>
    <item android:id="@+id/unmount"
          android:title="@string/menu_unmount"/>
    <item android:id="@+id/help"
          android:title="@string/menu_help"/>    
    <item android:id="@+id/fix"
           android:title="@string/menu_fix"/>
    <item android:id="@+id/bugreport"
          android:title="@string/menu_bugreport"/>    
    <item android:id="@+id/quit"
          android:title="@string/menu_quit"/>
</menu>